# langchain-basics

./: pyproject.toml
Chapter - 2/: 1_First_Chain.ipynb  2_Chain_with_CustomRunnable.ipynb  3_Parallel_Chains.ipynb  4_Conditional_Chains.ipynb
Chapter - 3/: 1_ReAct_Agent_Intro.ipynb  2_ReAct_DB_Agent.ipynb  init_db.py  view.py
Chapter - 3/SalesDB/: sales.db
Chapter-1/: 1_LLM Call.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
