[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "groq==0.37.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.22",
    "langchain-groq>=1.1.2",
    "load-dotenv>=0.1.0",
]
